@@ -46,6 +46,8 @@ def get_parser_admin():
         metavar='MODULE', help="update a module")
     parser.add_argument("--all", dest="update", action="append_const",
         const="ir", help="update all installed modules")
+    parser.add_argument("-m", "--update-modules-list", action="store_true",
+        dest="update_modules_list", help="Update list of tryton modules")
 
     parser.epilog = ('The first time a database is initialized admin '
         'password is read from file defined by TRYTONPASSFILE '
